--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Register Teacher{% endblock %}</h1>
+  <h1>{% block title %}Register User{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
@@ -11,6 +11,6 @@
             <input type="password" name="password" placeholder="Password" required="required">
             <input class="btn btn-success" type="submit" value="register">
         </form>
-        <a href="/" button name="Login" type="submit" class="btn btn-primary">Already have an account? login here</a></button>
+        <a href="/login" button name="Login" type="submit" class="btn btn-primary">Already have an account? login here</a></button>
     </div>
 {% endblock %}
